# bigfix_prefetch

./: .build.sh  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  file_to_prefetch.py  parse_prefech.py  parse_prefetch.py  prefetch.py  prefetch_from_dictionary.py  prefetch_from_url.py  prefetch_validate.py  prefetches_have_matching_hashes.py  setup.cfg  setup.py  url_to_prefetch.py
.github/workflows/: flake8.yaml  isort.yaml  misspell.yaml  pre-commit.yaml  pylint.yaml  pylint.yml  pylint_old.yaml  tag_and_release.yaml  test_pip.yaml  test_src.yaml  tests.yaml  yamllint.yaml
examples/: add_sha256_prefetch.py  add_sha256_prefetch_fixlets.py  add_sha256_prefetch_string.py  prefetch_swap_type.py
src/bigfix_prefetch/: __init__.py  __main__.py  prefetch.py  prefetch_from_file.py  prefetch_from_url.py  prefetch_validate.py  prefetches_have_matching_hashes.py
tests/: test_pip.py  tests.py
