[metadata]
name = bigfix-prefetch
version = attr: bigfix_prefetch.__version__
author = JGStew
author_email = noreply@jgstew.com
description = A python module for working with BigFix prefetches
long_description = file: README.md
long_description_content_type = text/markdown
keywords="bigfix prefetch download hash"
url = https://github.com/jgstew/bigfix_prefetch
project_urls =
    Bug Tracker = https://github.com/jgstew/bigfix_prefetch/issues
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration


[options]
package_dir =
    = src
packages = find:
python_requires = >=2.6


[options.packages.find]
where = src
